--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "compile": "graphql-codegen --require dotenv/config --config src/graphql/codegen.ts dotenv_config_path=.env.local"
   },
   "dependencies": {
+    "@apollo/client": "3.7.3",
+    "@supabase/supabase-js": "2.2.3",
+    "graphql": "16.6.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.16.2",
+    "@graphql-codegen/client-preset": "1.2.4",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
